# esp32-guia

001blink/: sdkconfig
001blink/main/: blink_example_main.c
002hello_world/: sdkconfig
002hello_world/main/: CMakeLists.txt  hello_world_main.c
003hello_worl2/: sdkconfig  sdkconfig.old
003hello_worl2/components/cmd/: CMakeLists.txt  cmd2.c
003hello_worl2/main/: CMakeLists.txt  hello_world_main.c
004gpio_lcd/: sdkconfig
004gpio_lcd/components/lcd/: CMakeLists.txt  lcd.c  lcd.h
004gpio_lcd/main/: CMakeLists.txt  main.c
004gpio_lcd/main/mybutton/: mybutton.c  mybutton.h
004gpio_lcd/main/mylcd/: i2c_adapter.c  i2c_adapter.h  mylcd.c  mylcd.h  mylcd_impl.c  mylcd_impl.h
004gpio_lcd/main/mytimer/: mytimer.c  mytimer.h
005adc/main/: main.c
006adc_interrupt/main/: continuous_read_main.c
007uart_rxtx/main/: uart_async_rxtxtasks_main.c
008_spi_pooling_and_wifi/: sdkconfig
008_spi_pooling_and_wifi/front/: index.html
008_spi_pooling_and_wifi/main/: CMakeLists.txt  main.c  rest_server.c  rest_server.h
008_spi_pooling_and_wifi/main/max7219/: max7219.c  max7219.h
009_bt_spp_acceptor/: sdkconfig
009_bt_spp_acceptor/main/: main.c
hello_world/components/cmd/: cmd.c  cmd.h
